# portfolio

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.pricer  Makefile  README.md  TODO.md  api.py  app.py  docker-compose.yml  go.work.sum  index.html  nginx.conf  package-lock.json  package.json  portfolio.db  pyproject.toml  pyrightconfig.json  release-please-config.json  render-entrypoint.sh  render-nginx.conf.template  render.yaml  setup-certs.sh  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: _docker-service.yml  _e2e.yml  _frontend-build.yml  _frontend-lint.yml  _frontend-test.yml  _go-build.yml  _go-lint.yml  _go-test.yml  _mobile-check.yml  ci.yml  (+7 more)
app/: deps.py  schemas.py
backend/: Dockerfile  Makefile  go.mod  go.sum
cache/: isin_to_ticker.json  prices.json
client/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
docs/: TODO.md  openapi.yaml
e2e/: income.spec.ts  markets.spec.ts  overview.spec.ts  watchlist.spec.ts
exports/: Transaction export.csv  sample-portfolio.csv
mobile/: App.tsx  app.json  eas.json  package-lock.json  package.json
nginx/: Dockerfile  entrypoint.sh  nginx.conf
playwright-report/: index.html
portfolio/: __init__.py  benchmark.py  cash.py  db.py  loader.py  performance.py  positions.py  prices.py  returns.py
pricer/: Dockerfile  hist_cache.py  main.py
src/: App.tsx  api.ts  main.tsx  schemas.ts  styles.css  types.ts
static/: app.js
templates/: index.html
(+122 files in other folders)
