[project]
name = "portfolio-dashboard"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "streamlit>=1.57.0",
    "uvicorn>=0.47.0",
    "yfinance>=1.3.0",
]
