[project]
name = "kapital-dashboard"
version = "0.1.0"
description = "FastAPI and React dashboard for portfolio CSV analytics"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "uvicorn>=0.47.0",
    "yfinance>=1.3.0",
]
