[project]
name = "kapital-pricer"
version = "0.1.0"
description = "yfinance price microservice for the portfolio dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.0.0",
    "requests>=2.34.2",
    "uvicorn>=0.47.0",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
